Changed settings to launch in VS Code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,1 @@
-<div class="header-container">
-    <header>
-        <h1 class="title">My Angular2 + TypeScript App</h1>
-    </header>
-</div>
-
-<div class="main-container">
-    <router-outlet></router-outlet>
-</div>
-
-<div class="footer-container">
-    <footer>
-        <a routerLink="" routerLinkActive="active">Home</a> | <a routerLink="/about" routerLinkActive="active">About</a>
-        <span>&copy; 2016</span>
-    </footer>
-</div>
+<h1>My First Getting Started Angular 2 App</h1>
