Added a simple form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
 <h1>My First Getting Started Angular 2 App</h1>
+<fieldset>
+    <legend>Bookmark {{bookmark.id}} details:</legend>
+    <label for="url">URL</label>
+    <input [(ngModel)]="bookmark.url" placeholder="URL" id="url">
+    <label for="description">Description</label>
+    <textarea rows="8" cols="40" [(ngModel)]="bookmark.description"></textarea>
+</fieldset>
