Connected the bookmark detail form using router

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <h1>{{title}}</h1>
 <nav>
     <a routerLink="/bookmarks">Bookmarks</a>
+    <a routerLink="/about">About</a>
 </nav>
 <router-outlet></router-outlet>
