--- a/src/app/bm-detail/bookmark-detail.component.html
+++ b/src/app/bm-detail/bookmark-detail.component.html
@@ -5,3 +5,4 @@
     <label for="description">Description</label>
     <textarea rows="8" cols="40" [(ngModel)]="bookmark.description"></textarea>
 </fieldset>
+<button (click)="goBack()">Go Back</button>
