Added Bootstrap forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,19 @@
 <div class="cotainter">
-    <h1>{{title}}</h1>
-    <nav>
-        <a routerLink="/bookmarks" routerLinkActive="active">Bookmarks</a>
-        <a routerLink="/about" routerLinkActive="active">About</a>
-    </nav>
+
+    <div class="navbar">
+        <a class="navbar-brand" href="#">{{title}}</a>
+        <ul class="nav navbar-nav">
+            <li class="active">
+                <a routerLink="/bookmarks" routerLinkActive="active">List</a>
+            </li>
+            <li class="active">
+                <a routerLink="/new" routerLinkActive="active">Add</a>
+            </li>
+            <li>
+                <a routerLink="/about" routerLinkActive="active">About</a>
+            </li>
+        </ul>
+    </div>
+
     <router-outlet></router-outlet>
 </div>
