--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -1,4 +1,30 @@
-<h2>Bookmarks</h2>
-<ul>
-    <li *ngFor="let bm of bookmarks" (click)="gotoDetail(bm)" [class.selected]="bm===selectedBookmark">{{bm.url}}</li>
-</ul>
+<form>
+    <div class="row">
+        <div class="col-sm-6">URL</div>
+        <div class="col-sm-2">View</div>
+        <div class="col-sm-2">Edit</div>
+        <div class="col-sm-2">
+            <div class="checkbox">
+                <label>
+                <input type="checkbox">Delete
+            </label>
+            </div>
+        </div>
+    </div>
+    <!-- /row -->
+
+    <div class="row" *ngFor="let bm of bookmarks" [class.selected]="bm===selectedBookmark">
+        <div class="col-sm-6">{{bm.url}}</div>
+        <div class="col-sm-2"><input type="button" class="btn btn-default" value="View"></div>
+        <div class="col-sm-2"><input type="button" class="btn btn-default" value="Edit" (click)="gotoDetail(bm)"></div>
+        <div class="col-sm-2">
+            <div class="checkbox">
+                <label>
+                <input type="checkbox" >
+            </label>
+            </div>
+        </div>
+    </div>
+    <!-- /row -->
+</form>
+<!-- /form -->
