--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,9 @@
             <li>
                 <a routerLink="/about" routerLinkActive="active">About</a>
             </li>
+            <li>
+                <a (click)="logout()">Log Out</a>
+            </li>
         </ul>
     </div>
 
