Mended redirect problem

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,6 @@
             </li>
         </ul>
     </div>
-
-</div><!--/.container-->
+</div>
+<!--/.container-->
 <router-outlet></router-outlet>
