--- a/src/app/login/login-form.component.html
+++ b/src/app/login/login-form.component.html
@@ -10,7 +10,7 @@
             <input type="password" id="pass" class="form-control" [(ngModel)]="password" name="pass">
         </div>
         <h4>{{diagnostic}}</h4>
-        <button type="button" class="btn btn-primary" (click)="register()">Not a member?</button>
+        <button type="button" class="btn btn-primary" (click)="onRegister()">Not a member?</button>
         <button type="submit" class="btn btn-default">Login</button>
     </form>
 </div>
