--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -16,8 +16,8 @@
 
         <div class="row" *ngFor="let bm of bookmarks" [class.selected]="bm===selectedBookmark">
             <div class="col-sm-6">{{bm.url}}</div>
-            <div class="col-sm-2"><input type="button" class="btn btn-default" value="View"></div>
-            <div class="col-sm-2"><input type="button" class="btn btn-default" value="Edit" (click)="gotoDetail(bm)"></div>
+            <div class="col-sm-2"><input type="button" class="btn btn-default" value="View" (click)="gotoDetail(bm)"></div>
+            <div class="col-sm-2"><input type="button" class="btn btn-default" value="Edit" (click)="gotoEdit(bm)"></div>
             <div class="col-sm-2">
                 <div class="checkbox">
                     <label>
